parser.output
   0  $accept : %entry% $end

   1  program : includes fdecls EOF

   2  includes :
   3           | include_list

   4  include_list : include_decl
   5               | include_list include_decl

   6  include_decl : INCLUDE STRING_LIT

   7  primitive : INT
   8            | FLOAT
   9            | CHAR
  10            | BOOL
  11            | UNIT

  12  object_t : TYPE_ID

  13  type_tag : primitive

  14  array_type : type_tag LBRACE brackets RBRACE

  15  datatype : type_tag
  16           | array_type

  17  brackets :
  18           | brackets RBRACE LBRACE

  19  fdecls : fdecl_list

  20  fdecl_list : fdecl
  21             | fdecl_list fdecl

  22  fdecl : FUNCTION ID ASSIGN LPAREN formals_opt RPAREN COLON datatype LBRACE stmts RBRACE

  23  formals_opt :
  24              | formal_list

  25  formal_list : formal
  26              | formal_list COMMA formal

  27  formal : ID COLON datatype

  28  actuals_opt :
  29              | actuals_list

  30  actuals_list : expr
  31               | actuals_list COMMA expr

  32  cdecls :
  33         | cdecl_list

  34  cdecl_list : cdecl
  35             | cdecl_list cdecl

  36  cdecl : CLASS ID LBRACE cbody RBRACE
  37        | CLASS ID EXTENDS ID LBRACE cbody RBRACE

  38  cbody :

  39  literals : INT_LIT
  40           | FLOAT_LIT
  41           | TRUE
  42           | FALSE
  43           | CHAR_LIT
  44           | STRING_LIT
  45           | ID

  46  expr_opt :
  47           | expr

  48  expr : literals
  49       | expr PLUS expr
  50       | expr MINUS expr
  51       | expr TIMES expr
  52       | expr DIVIDE expr
  53       | expr EQ expr
  54       | expr NEQ expr
  55       | expr LT expr
  56       | expr LEQ expr
  57       | expr GT expr
  58       | expr GEQ expr
  59       | expr AND expr
  60       | expr OR expr
  61       | MINUS expr
  62       | NOT expr
  63       | LPAREN expr RPAREN

  64  stmts : stmt_list

  65  stmt_list : stmt
  66            | stmt_list stmt

  67  stmt : expr SEMI
  68       | RETURN SEMI
  69       | RETURN expr SEMI
  70       | LBRACE stmt_list RBRACE
  71       | IF LPAREN expr RPAREN stmt
  72       | IF LPAREN expr RPAREN stmt ELSE stmt
  73       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
  74       | WHILE LPAREN expr RPAREN stmt
  75       | datatype ID SEMI
  76       | datatype ID ASSIGN expr SEMI

  77  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (77)
	includes : .  (2)

	INCLUDE  shift 3
	FUNCTION  reduce 2

	program  goto 4
	includes  goto 5
	include_list  goto 6
	include_decl  goto 7


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	include_decl : INCLUDE . STRING_LIT  (6)

	STRING_LIT  shift 8
	.  error


state 4
	%entry% : '\001' program .  (77)

	.  reduce 77


state 5
	program : includes . fdecls EOF  (1)

	FUNCTION  shift 9
	.  error

	fdecls  goto 10
	fdecl_list  goto 11
	fdecl  goto 12


state 6
	includes : include_list .  (3)
	include_list : include_list . include_decl  (5)

	INCLUDE  shift 3
	FUNCTION  reduce 3

	include_decl  goto 13


state 7
	include_list : include_decl .  (4)

	.  reduce 4


state 8
	include_decl : INCLUDE STRING_LIT .  (6)

	.  reduce 6


state 9
	fdecl : FUNCTION . ID ASSIGN LPAREN formals_opt RPAREN COLON datatype LBRACE stmts RBRACE  (22)

	ID  shift 14
	.  error


state 10
	program : includes fdecls . EOF  (1)

	EOF  shift 15
	.  error


state 11
	fdecls : fdecl_list .  (19)
	fdecl_list : fdecl_list . fdecl  (21)

	FUNCTION  shift 9
	EOF  reduce 19

	fdecl  goto 16


state 12
	fdecl_list : fdecl .  (20)

	.  reduce 20


state 13
	include_list : include_list include_decl .  (5)

	.  reduce 5


state 14
	fdecl : FUNCTION ID . ASSIGN LPAREN formals_opt RPAREN COLON datatype LBRACE stmts RBRACE  (22)

	ASSIGN  shift 17
	.  error


state 15
	program : includes fdecls EOF .  (1)

	.  reduce 1


state 16
	fdecl_list : fdecl_list fdecl .  (21)

	.  reduce 21


state 17
	fdecl : FUNCTION ID ASSIGN . LPAREN formals_opt RPAREN COLON datatype LBRACE stmts RBRACE  (22)

	LPAREN  shift 18
	.  error


state 18
	fdecl : FUNCTION ID ASSIGN LPAREN . formals_opt RPAREN COLON datatype LBRACE stmts RBRACE  (22)
	formals_opt : .  (23)

	ID  shift 19
	RPAREN  reduce 23

	formals_opt  goto 20
	formal_list  goto 21
	formal  goto 22


state 19
	formal : ID . COLON datatype  (27)

	COLON  shift 23
	.  error


state 20
	fdecl : FUNCTION ID ASSIGN LPAREN formals_opt . RPAREN COLON datatype LBRACE stmts RBRACE  (22)

	RPAREN  shift 24
	.  error


state 21
	formals_opt : formal_list .  (24)
	formal_list : formal_list . COMMA formal  (26)

	COMMA  shift 25
	RPAREN  reduce 24


state 22
	formal_list : formal .  (25)

	.  reduce 25


state 23
	formal : ID COLON . datatype  (27)

	INT  shift 26
	FLOAT  shift 27
	BOOL  shift 28
	CHAR  shift 29
	UNIT  shift 30
	.  error

	primitive  goto 31
	type_tag  goto 32
	array_type  goto 33
	datatype  goto 34


state 24
	fdecl : FUNCTION ID ASSIGN LPAREN formals_opt RPAREN . COLON datatype LBRACE stmts RBRACE  (22)

	COLON  shift 35
	.  error


state 25
	formal_list : formal_list COMMA . formal  (26)

	ID  shift 19
	.  error

	formal  goto 36


state 26
	primitive : INT .  (7)

	.  reduce 7


state 27
	primitive : FLOAT .  (8)

	.  reduce 8


state 28
	primitive : BOOL .  (10)

	.  reduce 10


state 29
	primitive : CHAR .  (9)

	.  reduce 9


state 30
	primitive : UNIT .  (11)

	.  reduce 11


state 31
	type_tag : primitive .  (13)

	.  reduce 13


32: shift/reduce conflict (shift 37, reduce 15) on LBRACE
state 32
	array_type : type_tag . LBRACE brackets RBRACE  (14)
	datatype : type_tag .  (15)

	LBRACE  shift 37
	RPAREN  reduce 15
	COMMA  reduce 15
	ID  reduce 15


state 33
	datatype : array_type .  (16)

	.  reduce 16


state 34
	formal : ID COLON datatype .  (27)

	.  reduce 27


state 35
	fdecl : FUNCTION ID ASSIGN LPAREN formals_opt RPAREN COLON . datatype LBRACE stmts RBRACE  (22)

	INT  shift 26
	FLOAT  shift 27
	BOOL  shift 28
	CHAR  shift 29
	UNIT  shift 30
	.  error

	primitive  goto 31
	type_tag  goto 32
	array_type  goto 33
	datatype  goto 38


state 36
	formal_list : formal_list COMMA formal .  (26)

	.  reduce 26


state 37
	array_type : type_tag LBRACE . brackets RBRACE  (14)
	brackets : .  (17)

	.  reduce 17

	brackets  goto 39


state 38
	fdecl : FUNCTION ID ASSIGN LPAREN formals_opt RPAREN COLON datatype . LBRACE stmts RBRACE  (22)

	LBRACE  shift 40
	.  error


state 39
	array_type : type_tag LBRACE brackets . RBRACE  (14)
	brackets : brackets . RBRACE LBRACE  (18)

	RBRACE  shift 41
	.  error


state 40
	fdecl : FUNCTION ID ASSIGN LPAREN formals_opt RPAREN COLON datatype LBRACE . stmts RBRACE  (22)

	LPAREN  shift 42
	LBRACE  shift 43
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	IF  shift 48
	FOR  shift 49
	WHILE  shift 50
	RETURN  shift 51
	INT  shift 26
	FLOAT  shift 27
	BOOL  shift 28
	CHAR  shift 29
	UNIT  shift 30
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	.  error

	primitive  goto 31
	type_tag  goto 32
	array_type  goto 33
	datatype  goto 57
	stmts  goto 58
	expr  goto 59
	literals  goto 60
	stmt_list  goto 61
	stmt  goto 62


state 41
	array_type : type_tag LBRACE brackets RBRACE .  (14)
	brackets : brackets RBRACE . LBRACE  (18)

	LBRACE  shift 63
	RPAREN  reduce 14
	COMMA  reduce 14
	ID  reduce 14


state 42
	expr : LPAREN . expr RPAREN  (63)

	LPAREN  shift 42
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	.  error

	expr  goto 64
	literals  goto 60


state 43
	stmt : LBRACE . stmt_list RBRACE  (70)

	LPAREN  shift 42
	LBRACE  shift 43
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	IF  shift 48
	FOR  shift 49
	WHILE  shift 50
	RETURN  shift 51
	INT  shift 26
	FLOAT  shift 27
	BOOL  shift 28
	CHAR  shift 29
	UNIT  shift 30
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	.  error

	primitive  goto 31
	type_tag  goto 32
	array_type  goto 33
	datatype  goto 57
	expr  goto 59
	literals  goto 60
	stmt_list  goto 65
	stmt  goto 62


state 44
	expr : MINUS . expr  (61)

	LPAREN  shift 42
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	.  error

	expr  goto 66
	literals  goto 60


state 45
	expr : NOT . expr  (62)

	LPAREN  shift 42
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	.  error

	expr  goto 67
	literals  goto 60


state 46
	literals : TRUE .  (41)

	.  reduce 41


state 47
	literals : FALSE .  (42)

	.  reduce 42


state 48
	stmt : IF . LPAREN expr RPAREN stmt  (71)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (72)

	LPAREN  shift 68
	.  error


state 49
	stmt : FOR . LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (73)

	LPAREN  shift 69
	.  error


state 50
	stmt : WHILE . LPAREN expr RPAREN stmt  (74)

	LPAREN  shift 70
	.  error


state 51
	stmt : RETURN . SEMI  (68)
	stmt : RETURN . expr SEMI  (69)

	SEMI  shift 71
	LPAREN  shift 42
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	.  error

	expr  goto 72
	literals  goto 60


state 52
	literals : INT_LIT .  (39)

	.  reduce 39


state 53
	literals : FLOAT_LIT .  (40)

	.  reduce 40


state 54
	literals : CHAR_LIT .  (43)

	.  reduce 43


state 55
	literals : STRING_LIT .  (44)

	.  reduce 44


state 56
	literals : ID .  (45)

	.  reduce 45


state 57
	stmt : datatype . ID SEMI  (75)
	stmt : datatype . ID ASSIGN expr SEMI  (76)

	ID  shift 73
	.  error


state 58
	fdecl : FUNCTION ID ASSIGN LPAREN formals_opt RPAREN COLON datatype LBRACE stmts . RBRACE  (22)

	RBRACE  shift 74
	.  error


state 59
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)
	stmt : expr . SEMI  (67)

	SEMI  shift 75
	PLUS  shift 76
	MINUS  shift 77
	TIMES  shift 78
	DIVIDE  shift 79
	EQ  shift 80
	NEQ  shift 81
	LT  shift 82
	LEQ  shift 83
	GT  shift 84
	GEQ  shift 85
	AND  shift 86
	OR  shift 87
	.  error


state 60
	expr : literals .  (48)

	.  reduce 48


state 61
	stmts : stmt_list .  (64)
	stmt_list : stmt_list . stmt  (66)

	LPAREN  shift 42
	LBRACE  shift 43
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	IF  shift 48
	FOR  shift 49
	WHILE  shift 50
	RETURN  shift 51
	INT  shift 26
	FLOAT  shift 27
	BOOL  shift 28
	CHAR  shift 29
	UNIT  shift 30
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	RBRACE  reduce 64

	primitive  goto 31
	type_tag  goto 32
	array_type  goto 33
	datatype  goto 57
	expr  goto 59
	literals  goto 60
	stmt  goto 88


state 62
	stmt_list : stmt .  (65)

	.  reduce 65


state 63
	brackets : brackets RBRACE LBRACE .  (18)

	.  reduce 18


state 64
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)
	expr : LPAREN expr . RPAREN  (63)

	RPAREN  shift 89
	PLUS  shift 76
	MINUS  shift 77
	TIMES  shift 78
	DIVIDE  shift 79
	EQ  shift 80
	NEQ  shift 81
	LT  shift 82
	LEQ  shift 83
	GT  shift 84
	GEQ  shift 85
	AND  shift 86
	OR  shift 87
	.  error


state 65
	stmt_list : stmt_list . stmt  (66)
	stmt : LBRACE stmt_list . RBRACE  (70)

	LPAREN  shift 42
	LBRACE  shift 43
	RBRACE  shift 90
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	IF  shift 48
	FOR  shift 49
	WHILE  shift 50
	RETURN  shift 51
	INT  shift 26
	FLOAT  shift 27
	BOOL  shift 28
	CHAR  shift 29
	UNIT  shift 30
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	.  error

	primitive  goto 31
	type_tag  goto 32
	array_type  goto 33
	datatype  goto 57
	expr  goto 59
	literals  goto 60
	stmt  goto 88


state 66
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)
	expr : MINUS expr .  (61)

	.  reduce 61


state 67
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)
	expr : NOT expr .  (62)

	.  reduce 62


state 68
	stmt : IF LPAREN . expr RPAREN stmt  (71)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (72)

	LPAREN  shift 42
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	.  error

	expr  goto 91
	literals  goto 60


state 69
	stmt : FOR LPAREN . expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (73)
	expr_opt : .  (46)

	LPAREN  shift 42
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	SEMI  reduce 46

	expr  goto 92
	literals  goto 60
	expr_opt  goto 93


state 70
	stmt : WHILE LPAREN . expr RPAREN stmt  (74)

	LPAREN  shift 42
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	.  error

	expr  goto 94
	literals  goto 60


state 71
	stmt : RETURN SEMI .  (68)

	.  reduce 68


state 72
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)
	stmt : RETURN expr . SEMI  (69)

	SEMI  shift 95
	PLUS  shift 76
	MINUS  shift 77
	TIMES  shift 78
	DIVIDE  shift 79
	EQ  shift 80
	NEQ  shift 81
	LT  shift 82
	LEQ  shift 83
	GT  shift 84
	GEQ  shift 85
	AND  shift 86
	OR  shift 87
	.  error


state 73
	stmt : datatype ID . SEMI  (75)
	stmt : datatype ID . ASSIGN expr SEMI  (76)

	SEMI  shift 96
	ASSIGN  shift 97
	.  error


state 74
	fdecl : FUNCTION ID ASSIGN LPAREN formals_opt RPAREN COLON datatype LBRACE stmts RBRACE .  (22)

	.  reduce 22


state 75
	stmt : expr SEMI .  (67)

	.  reduce 67


state 76
	expr : expr PLUS . expr  (49)

	LPAREN  shift 42
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	.  error

	expr  goto 98
	literals  goto 60


state 77
	expr : expr MINUS . expr  (50)

	LPAREN  shift 42
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	.  error

	expr  goto 99
	literals  goto 60


state 78
	expr : expr TIMES . expr  (51)

	LPAREN  shift 42
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	.  error

	expr  goto 100
	literals  goto 60


state 79
	expr : expr DIVIDE . expr  (52)

	LPAREN  shift 42
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	.  error

	expr  goto 101
	literals  goto 60


state 80
	expr : expr EQ . expr  (53)

	LPAREN  shift 42
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	.  error

	expr  goto 102
	literals  goto 60


state 81
	expr : expr NEQ . expr  (54)

	LPAREN  shift 42
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	.  error

	expr  goto 103
	literals  goto 60


state 82
	expr : expr LT . expr  (55)

	LPAREN  shift 42
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	.  error

	expr  goto 104
	literals  goto 60


state 83
	expr : expr LEQ . expr  (56)

	LPAREN  shift 42
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	.  error

	expr  goto 105
	literals  goto 60


state 84
	expr : expr GT . expr  (57)

	LPAREN  shift 42
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	.  error

	expr  goto 106
	literals  goto 60


state 85
	expr : expr GEQ . expr  (58)

	LPAREN  shift 42
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	.  error

	expr  goto 107
	literals  goto 60


state 86
	expr : expr AND . expr  (59)

	LPAREN  shift 42
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	.  error

	expr  goto 108
	literals  goto 60


state 87
	expr : expr OR . expr  (60)

	LPAREN  shift 42
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	.  error

	expr  goto 109
	literals  goto 60


state 88
	stmt_list : stmt_list stmt .  (66)

	.  reduce 66


state 89
	expr : LPAREN expr RPAREN .  (63)

	.  reduce 63


state 90
	stmt : LBRACE stmt_list RBRACE .  (70)

	.  reduce 70


state 91
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)
	stmt : IF LPAREN expr . RPAREN stmt  (71)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (72)

	RPAREN  shift 110
	PLUS  shift 76
	MINUS  shift 77
	TIMES  shift 78
	DIVIDE  shift 79
	EQ  shift 80
	NEQ  shift 81
	LT  shift 82
	LEQ  shift 83
	GT  shift 84
	GEQ  shift 85
	AND  shift 86
	OR  shift 87
	.  error


state 92
	expr_opt : expr .  (47)
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)

	PLUS  shift 76
	MINUS  shift 77
	TIMES  shift 78
	DIVIDE  shift 79
	EQ  shift 80
	NEQ  shift 81
	LT  shift 82
	LEQ  shift 83
	GT  shift 84
	GEQ  shift 85
	AND  shift 86
	OR  shift 87
	SEMI  reduce 47
	RPAREN  reduce 47


state 93
	stmt : FOR LPAREN expr_opt . SEMI expr SEMI expr_opt RPAREN stmt  (73)

	SEMI  shift 111
	.  error


state 94
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)
	stmt : WHILE LPAREN expr . RPAREN stmt  (74)

	RPAREN  shift 112
	PLUS  shift 76
	MINUS  shift 77
	TIMES  shift 78
	DIVIDE  shift 79
	EQ  shift 80
	NEQ  shift 81
	LT  shift 82
	LEQ  shift 83
	GT  shift 84
	GEQ  shift 85
	AND  shift 86
	OR  shift 87
	.  error


state 95
	stmt : RETURN expr SEMI .  (69)

	.  reduce 69


state 96
	stmt : datatype ID SEMI .  (75)

	.  reduce 75


state 97
	stmt : datatype ID ASSIGN . expr SEMI  (76)

	LPAREN  shift 42
	MINUS  shift 44
	NOT  shift 45
	TRUE  shift 46
	FALSE  shift 47
	INT_LIT  shift 52
	FLOAT_LIT  shift 53
	CHAR_LIT  shift 54
	STRING_LIT  shift 55
	ID  shift 56
	.  error

	expr  goto 113
	literals  goto 60


state 98
	expr : expr . PLUS expr  (49)
	expr : expr PLUS expr .  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)

	TIMES  shift 78
	DIVIDE  shift 79
	SEMI  reduce 49
	RPAREN  reduce 49
	PLUS  reduce 49
	MINUS  reduce 49
	EQ  reduce 49
	NEQ  reduce 49
	LT  reduce 49
	LEQ  reduce 49
	GT  reduce 49
	GEQ  reduce 49
	AND  reduce 49
	OR  reduce 49


state 99
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr MINUS expr .  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)

	TIMES  shift 78
	DIVIDE  shift 79
	SEMI  reduce 50
	RPAREN  reduce 50
	PLUS  reduce 50
	MINUS  reduce 50
	EQ  reduce 50
	NEQ  reduce 50
	LT  reduce 50
	LEQ  reduce 50
	GT  reduce 50
	GEQ  reduce 50
	AND  reduce 50
	OR  reduce 50


state 100
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr TIMES expr .  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)

	.  reduce 51


state 101
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr DIVIDE expr .  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)

	.  reduce 52


state 102
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr EQ expr .  (53)
	expr : expr . NEQ expr  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)

	PLUS  shift 76
	MINUS  shift 77
	TIMES  shift 78
	DIVIDE  shift 79
	LT  shift 82
	LEQ  shift 83
	GT  shift 84
	GEQ  shift 85
	SEMI  reduce 53
	RPAREN  reduce 53
	EQ  reduce 53
	NEQ  reduce 53
	AND  reduce 53
	OR  reduce 53


state 103
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NEQ expr  (54)
	expr : expr NEQ expr .  (54)
	expr : expr . LT expr  (55)
	expr : expr . LEQ expr  (56)
	expr : expr . GT expr  (57)
	expr : expr . GEQ expr  (58)
	expr : expr . AND expr  (59)
	expr : expr . OR expr  (60)

	PLUS  shift 76
	MINUS  shift 77
	TIMES  shift 78
	DIVIDE  shift 79
	LT  shift 82
	LEQ  shift 83
	GT  shift 84
	GEQ  shift 85
	SEMI  reduce 54
	RPAREN  reduce 54
	EQ  reduce 54
	NEQ  reduce 54
	AND  reduce 54
	OR  reduce 54

